Add menu in left sidebar with mdi fonts

--- a/style.css
+++ b/style.css
@@ -4,25 +4,59 @@
   box-sizing: border-box;
   font-family: sans-serif;
   /* border: 1px solid #000; */
-  background-color: #ccc;
+}
+
+body {
+  background-color: #808080;
 }
 
 .container {
-  width: min(1440px, 100vw);
+  width: min(1430px, 100vw);
   display: grid;
   grid-template-columns: 1fr 4fr;
   margin: auto;
 }
 
 .sidebar {
-  background: coral;
-  /* width: clamp(200px, 20%, 300px); */
+  background: #458fce;
   min-width: 150px;
+  padding: 0 1rem;
 }
 
 .sidebar-content {
+  color: white;
   position: sticky;
   top: 0;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  gap: 1rem;
+}
+
+.menu-header {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-top: 2rem;
+  letter-spacing: 2px;
+  vertical-align: center;
+  display: flex;
+  align-items: center;
+}
+
+.material-icons {
+  text-align: center;
+}
+
+.material-icons.menu-header {
+  margin-top: 2rem;
+  font-size: 3rem;
+}
+
+.menu-item {
+  font-size: 1.2rem;
+  font-weight: bold;
+  letter-spacing: 1px;
+  display: flex;
+  align-items: center;
 }
 
 main {
@@ -31,13 +65,15 @@ main {
 }
 
 .header {
-  background-color: steelblue;
+  background-color: white;
   position: sticky;
   top: 0;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 5;
 }
 
 .main-content {
-  background-color: honeydew;
+  background-color: #e3e8ef;
   display: grid;
   grid-template-columns: 72% 28%;
 }
@@ -47,41 +83,74 @@ main {
   grid-template-rows: 2rem 1fr;
 }
 
-.projects-header {
-  padding: 0.5rem 1rem 0 1rem;
+.header-2 {
+  padding: 1rem 1rem 0.5rem 1rem;
+  background-color: #e3e8ef;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.projects-container .header-2 {
   position: sticky;
   top: 8rem;
-  background-color: yellow;
 }
 
 .projects {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 1rem;
-  padding: 1rem 0.5rem 1rem 1rem;
+  gap: 1.5rem;
+  padding: 0 0.5rem 1rem 1rem;
 }
 
 .project {
-  height: 10rem;
+  height: 15rem;
   padding: 1rem;
   background-color: #fff;
+  border-left: 8px solid #e7b74d;
+  border-radius: 8px;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 .rightside {
   min-width: 150px;
-  padding: 0.5rem;
+  padding: 0 0.5rem;
   display: grid;
-  grid-template-rows: 40vh 40vh;
+  grid-template-rows: 38vh 38vh;
 }
 
-.announcements {
-  background-color: pink;
-  position: sticky;
-  top: 8.5rem;
+.rightside-container {
+  
 }
 
-.trending {
-  background-color: aqua;
+#top {
   position: sticky;
-  top: calc(8.5rem + 40vh);
+  top: 8rem;
+} 
+
+#bottom {
+  position: sticky;
+  top: calc(10rem + 38vh);
+}
+
+.list-container {
+  height: 88%;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
+  padding: 0 1rem;
+display: grid;
+grid-template-rows: 1fr 1fr 1fr;
+}
+
+.list-item {
+  padding: 0.5rem;
+  border-bottom: 2px solid #ccc;
+}
+
+h3 {
+  font-size: 0.9rem;
+}
+
+p {
+  font-size: 0.9rem;
 }
