Style the project card

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   padding: 0px;
   box-sizing: border-box;
   font-family: sans-serif;
-  /* border: 1px solid #000; */
+  border: 1px solid #000;
 }
 
 body {
@@ -15,10 +15,13 @@ body {
   display: grid;
   grid-template-columns: 1fr 4fr;
   margin: auto;
+  background-image: url("https://images.unsplash.com/photo-1513151233558-d860c5398176?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80");
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .sidebar {
-  background: #458fce;
+  background: #0006;
   min-width: 150px;
   padding: 0 1rem;
 }
@@ -37,9 +40,8 @@ body {
   font-weight: bold;
   margin-top: 2rem;
   letter-spacing: 2px;
-  vertical-align: center;
   display: flex;
-  align-items: center;
+  align-items: center; 
 }
 
 .material-icons {
@@ -65,7 +67,8 @@ main {
 }
 
 .header {
-  background-color: white;
+  background-color: #2b6478;
+  background-image: url("https://images.unsplash.com/photo-1513151233558-d860c5398176?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80");
   position: sticky;
   top: 0;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -73,9 +76,8 @@ main {
 }
 
 .main-content {
-  background-color: #e3e8ef;
   display: grid;
-  grid-template-columns: 72% 28%;
+  grid-template-columns: 18fr 7fr;
 }
 
 .project-container {
@@ -85,15 +87,16 @@ main {
 
 .header-2 {
   padding: 1rem 1rem 0.5rem 1rem;
-  background-color: #e3e8ef;
+  /* background-color: #285c6e; */
   font-size: 1.2rem;
   font-weight: bold;
+  color: white;
 }
 
-.projects-container .header-2 {
+/* .projects-container .header-2 {
   position: sticky;
   top: 8rem;
-}
+} */
 
 .projects {
   display: grid;
@@ -103,17 +106,44 @@ main {
 }
 
 .project {
-  height: 15rem;
+  height: 16rem;
   padding: 1rem;
   background-color: #fff;
   border-left: 8px solid #e7b74d;
   border-radius: 8px;
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+.project-name {
+  grid-area: 1 / 1 / 2 / 6;
+  font-size: 1rem;
+  font-weight: bold;
+}
+.project-intro {
+  grid-area: 2 / 1 / 4 / 6;
+  font-size: 0.9rem;
+}
+.thumbnail {
+  grid-area: 4 / 1 / 7 / 6;
+  width: 80%;
+}
+.icon1 {
+  grid-area: 4 / 5 / 6 / 6;
+  margin: auto;
+}
+.icon2 {
+  grid-area: 5 / 5 / 7 / 6;
+  width: 50%;
+  margin: auto;
+}
+.icon3 {
+  grid-area: 6 / 5 / 8 / 6;
+  margin: auto;
 }
 
 .rightside {
   min-width: 150px;
-  padding: 0 0.5rem;
   display: grid;
   grid-template-rows: 38vh 38vh;
 }
@@ -122,7 +152,7 @@ main {
   
 }
 
-#top {
+/* #top {
   position: sticky;
   top: 8rem;
 } 
@@ -130,14 +160,14 @@ main {
 #bottom {
   position: sticky;
   top: calc(10rem + 38vh);
-}
+} */
 
 .list-container {
   height: 88%;
   background-color: white;
   border-radius: 8px;
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
-  padding: 0 1rem;
+  margin: 0 1rem;
 display: grid;
 grid-template-rows: 1fr 1fr 1fr;
 }
@@ -147,10 +177,3 @@ grid-template-rows: 1fr 1fr 1fr;
   border-bottom: 2px solid #ccc;
 }
 
-h3 {
-  font-size: 0.9rem;
-}
-
-p {
-  font-size: 0.9rem;
-}
