--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   padding: 0px;
   box-sizing: border-box;
   font-family: sans-serif;
-  border: 1px solid #000;
+  /* border: 1px solid #000; */
 }
 
 body {
@@ -15,7 +15,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 4fr;
   margin: auto;
-  background-image: url("https://images.unsplash.com/photo-1513151233558-d860c5398176?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80");
+  background-image: url('https://images.unsplash.com/photo-1513151233558-d860c5398176?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80');
   background-size: cover;
   background-attachment: fixed;
 }
@@ -41,7 +41,7 @@ body {
   margin-top: 2rem;
   letter-spacing: 2px;
   display: flex;
-  align-items: center; 
+  align-items: center;
 }
 
 .material-icons {
@@ -68,11 +68,15 @@ main {
 
 .header {
   background-color: #2b6478;
-  background-image: url("https://images.unsplash.com/photo-1513151233558-d860c5398176?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80");
+  background-image: url('https://images.unsplash.com/photo-1513151233558-d860c5398176?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80');
   position: sticky;
   top: 0;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   z-index: 5;
+}
+
+h1 {
+  color: white;
 }
 
 .main-content {
@@ -116,30 +120,44 @@ main {
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
 .project-name {
-  grid-area: 1 / 1 / 2 / 6;
+  grid-area: 1 / 1 / 2 / 4;
   font-size: 1rem;
   font-weight: bold;
 }
-.project-intro {
-  grid-area: 2 / 1 / 4 / 6;
-  font-size: 0.9rem;
+.course {
+  grid-area: 1 / 4 / 2 / 6;
+  font-size: 1rem;
+  font-weight: bold;
+  font-style: italic;
+  text-align: right;
+  color: #e7b74d;
 }
-.thumbnail {
-  grid-area: 4 / 1 / 7 / 6;
+.project-intro {
+  grid-area: 2 / 1 / 3 / 6;
+  font-size: 0.9rem;
+  padding: 0.5rem 0;
+}
+.project-thumbnail {
+  grid-area: 3 / 1 / 7 / 6;
   width: 80%;
 }
-.icon1 {
-  grid-area: 4 / 5 / 6 / 6;
-  margin: auto;
+.live-link {
+  grid-area: 4 / 5 / 5 / 6;
+  margin-top: 0.5rem;
+  display: flex;
+  justify-content: right;
 }
-.icon2 {
-  grid-area: 5 / 5 / 7 / 6;
-  width: 50%;
-  margin: auto;
+.github-link {
+  grid-area: 5 / 5 / 6 / 6;
+  margin-top: 0.5rem;
+  display: flex;
+  justify-content: right;
 }
-.icon3 {
-  grid-area: 6 / 5 / 8 / 6;
-  margin: auto;
+.odin-link {
+  grid-area: 6 / 5 / 7 / 6;
+  margin-top: 0.5rem;
+  display: flex;
+  justify-content: right;
 }
 
 .rightside {
@@ -149,7 +167,6 @@ main {
 }
 
 .rightside-container {
-  
 }
 
 /* #top {
@@ -168,12 +185,11 @@ main {
   border-radius: 8px;
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
   margin: 0 1rem;
-display: grid;
-grid-template-rows: 1fr 1fr 1fr;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
 }
 
 .list-item {
   padding: 0.5rem;
   border-bottom: 2px solid #ccc;
 }
-
