--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ h3 {
 .project:hover {
   border-left: 8px solid #e7b74d;
   scale: 1.05;
+  /* cursor: pointer; */
 }
 .project-name {
   grid-area: 1 / 1 / 2 / 4;
@@ -174,6 +175,7 @@ h3 {
 .project-thumbnail {
   grid-area: 3 / 1 / 7 / 6;
   width: 80%;
+  cursor: pointer;
 }
 .live-link {
   grid-area: 4 / 5 / 5 / 6;
