--- a/style.css
+++ b/style.css
@@ -146,7 +146,15 @@ h3 {
   border-radius: 8px;
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(6, auto);
+  grid-template-areas: 
+    "name name name course course"
+    "intro intro intro intro intro"
+    "thumb thumb thumb thumb blank"
+    "thumb thumb thumb thumb live-link"
+    "thumb thumb thumb thumb github-link"
+    "thumb thumb thumb thumb odin-link";
   transition: 0.5s;
 }
 .project:hover {
@@ -155,12 +163,14 @@ h3 {
   /* cursor: pointer; */
 }
 .project-name {
-  grid-area: 1 / 1 / 2 / 4;
+  /* grid-area: 1 / 1 / 2 / 4; */
+  grid-area: name;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1rem;
 }
 .course {
-  grid-area: 1 / 4 / 2 / 6;
+  /* grid-area: 1 / 4 / 2 / 6; */
+  grid-area: course;
   font-size: 1rem;
   font-family: Arial, Helvetica, sans-serif;
   font-style: italic;
@@ -168,29 +178,34 @@ h3 {
   color: #e7b74d;
 }
 .project-intro {
-  grid-area: 2 / 1 / 3 / 6;
+  /* grid-area: 2 / 1 / 3 / 6; */
+  grid-area: intro;
   font-size: 0.9rem;
   padding: 0.5rem 0;
 }
 .project-thumbnail {
-  grid-area: 3 / 1 / 7 / 6;
-  width: 80%;
+  /* grid-area: 3 / 1 / 7 / 6; */
+  grid-area: thumb;
+  width: 100%;
   cursor: pointer;
 }
 .live-link {
-  grid-area: 4 / 5 / 5 / 6;
+  /* grid-area: 4 / 5 / 5 / 6; */
+  grid-area: live-link;
   margin-top: 0.5rem;
   display: flex;
   justify-content: center;
 }
 .github-link {
-  grid-area: 5 / 5 / 6 / 6;
+  /* grid-area: 5 / 5 / 6 / 6; */
+  grid-area: github-link;
   margin-top: 0.5rem;
   display: flex;
   justify-content: center;
 }
 .odin-link {
-  grid-area: 6 / 5 / 7 / 6;
+  /* grid-area: 6 / 5 / 7 / 6; */
+  grid-area: odin-link;
   margin-top: 0.5rem;
   display: flex;
   justify-content: center;
