--- a/style.css
+++ b/style.css
@@ -11,82 +11,27 @@
 }
 
 body {
-  background-color: #808080;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.container {
-  width: 100vw;
-  /* display: grid; */
-  /* grid-template-columns: 1fr 5fr; */
-  margin: auto;
+  min-height: 100vh;
   background-image: url('https://images.unsplash.com/photo-1513151233558-d860c5398176?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80');
   background-size: cover;
   background-attachment: fixed;
 }
 
-.sidebar {
-  background: #0006;
-  min-width: 100px;
-  padding: 0 1rem;
-}
-
-.sidebar-content {
-  color: white;
+.header-container {
+  background-color: #0006;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   position: sticky;
   top: 0;
-  display: grid;
-  grid-template-columns: 1fr 4fr;
-  gap: 1rem;
-}
-
-.menu-header {
-  font-size: 1.2rem;
-  font-weight: bold;
-  margin-top: 2rem;
-  letter-spacing: 2px;
-  display: flex;
-  align-items: center;
-}
-
-.material-icons {
-  text-align: center;
-}
-
-.material-icons.menu-header {
-  margin-top: 2rem;
-  font-size: 3rem;
-}
-
-.menu-item {
-  font-size: 1rem;
-  font-weight: bold;
-  letter-spacing: 1px;
-  display: flex;
-  align-items: center;
-}
-
-main {
-  display: grid;
-  grid-template-rows: 8rem 1fr;
 }
 
 .header {
-  /* background-color: #2b6478; */
-  /* background-image: url('https://images.unsplash.com/photo-1513151233558-d860c5398176?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80'); */
-  position: sticky;
-  top: 0;
-  /* z-index: 5; */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  max-width: 1440px;
+  margin: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: end;
   padding: 1rem;
-  background-color: #0006;
 }
 
 h1 {
@@ -99,47 +44,33 @@ h1 {
 }
 
 .github-name {
-  color: #ccc;
+  color: #ddd;
   text-shadow: 1px 1px 4px rgba(0, 0, 0, 1);
 }
 
-.main-content {
-  width: 95%;
-  margin: auto;
-  margin-top: 1rem;
-  /* display: grid; */
-  /* grid-template-columns: 4fr 1fr; */
-  /* background-color: #0001; */
-  /* display: flex;
-  justify-content: center; */
-}
-
-/* .project-container {
-  display: grid;
-  grid-template-rows: 2rem 1fr;
-} */
-
 h2 {
   padding: 1rem 1rem 0.5rem 1rem;
-  /* background-color: #285c6e; */
   font-size: 1.2rem;
-  font-family:Arial, Helvetica, sans-serif;
-  /* color: white; */
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-h3 {
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: normal;
+.projects-container {
+  padding-top: 2rem;
+display: flex;
+justify-content: center;
 }
 
 .projects {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  max-width: 1300px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   gap: 2.5rem;
   padding: 0 0.5rem 1rem 1rem;
 }
 
 .project {
+  max-width: 600px;
   padding: 1rem;
   background-color: #fff;
   border-left: 8px solid #ccc;
@@ -160,88 +91,50 @@ h3 {
 .project:hover {
   border-left: 8px solid #e7b74d;
   scale: 1.05;
-  /* cursor: pointer; */
 }
 .project-name {
-  /* grid-area: 1 / 1 / 2 / 4; */
   grid-area: name;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 .course {
-  /* grid-area: 1 / 4 / 2 / 6; */
-  grid-area: course;
-  font-size: 1rem;
+  font-size: 1.1rem;
   font-family: Arial, Helvetica, sans-serif;
   font-style: italic;
   text-align: right;
   color: #e7b74d;
 }
 .project-intro {
-  /* grid-area: 2 / 1 / 3 / 6; */
   grid-area: intro;
-  font-size: 0.9rem;
+  font-size: 1rem;
   padding: 0.5rem 0;
 }
 .project-thumbnail {
-  /* grid-area: 3 / 1 / 7 / 6; */
   grid-area: thumb;
   width: 100%;
   cursor: pointer;
 }
 .live-link {
-  /* grid-area: 4 / 5 / 5 / 6; */
   grid-area: live-link;
   margin-top: 0.5rem;
   display: flex;
   justify-content: center;
 }
 .github-link {
-  /* grid-area: 5 / 5 / 6 / 6; */
   grid-area: github-link;
   margin-top: 0.5rem;
   display: flex;
   justify-content: center;
 }
 .odin-link {
-  /* grid-area: 6 / 5 / 7 / 6; */
   grid-area: odin-link;
   margin-top: 0.5rem;
   display: flex;
   justify-content: center;
 }
 
-.rightside {
-  min-width: 150px;
-  display: grid;
-  grid-template-rows: 38vh 38vh;
-}
-
-.rightside-container {
-}
-
-/* #top {
-  position: sticky;
-  top: 8rem;
-} 
-
-#bottom {
-  position: sticky;
-  top: calc(10rem + 38vh);
-} */
-
-.list-container {
-  height: 88%;
-  background-color: white;
-  border-radius: 8px;
-  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
-  margin: 0 1rem;
-  display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
-}
-
-.list-item {
-  padding: 0.5rem;
-  border-bottom: 2px solid #ccc;
-  font-size: 0.8rem;
+footer {
+  background-color: #0006;
+  text-align: center;
+  color: #ccc;
 }
