--- a/style.css
+++ b/style.css
@@ -98,6 +98,8 @@ justify-content: center;
   font-size: 1.2rem;
 }
 .course {
+  grid-area: course;
+  text-decoration: none;
   font-size: 1.1rem;
   font-family: Arial, Helvetica, sans-serif;
   font-style: italic;
